- dark mode - fixes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -471,6 +471,36 @@
     }
   }
 
+  .duplicator {
+
+    .duplicator-item {
+      background: $dark_mode_foreground;
+
+      input[type="text"],
+      input[type="number"] {
+        background: $dark_mode_foreground;
+        border-bottom: 1px solid lighten($dark_mode_foreground, 10%);
+
+        &:focus, &.is-error {
+          border-top-color: transparent !important;
+          border-left-color: transparent !important;
+          border-right-color: transparent !important;
+        }
+      }
+
+      label {
+        opacity: 0.45;
+      }
+    }
+  }
+
+  .windows {
+    ::-webkit-scrollbar-thumb {
+      border: 6px solid transparent;
+      background: $dark_mode_foreground !important;
+      background-clip: padding-box !important ;
+    }
+  }
 }
 
 .info-box-wrapper {
@@ -497,15 +527,5 @@
       background: #7f7f7f;
       border-radius: 25px;
       background-clip: padding-box ;
-  }
-}
-
-@media (prefers-color-scheme: dark) { 
-  .windows {
-    ::-webkit-scrollbar-thumb {
-      border: 6px solid transparent;
-      background: $dark_mode_foreground !important;
-      background-clip: padding-box !important ;
-    }
   }
 }
